Question 3.i
